k8s-deployment/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-laravel
  namespace: ns-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-laravel
  template:
    metadata:
      labels:
        app: mysql-laravel
    spec:
      containers:
      - name:  mysql-laravel
        image: mysql:8.0
        resources:
          limits:
            cpu: "0.4" 
            memory: 500Mi 
          requests:
            cpu: "0.1" 
            memory: 150Mi 
        ports:
        - containerPort: 3306
        volumeMounts: 
        - name: mysql-laravel
          mountPath: /data
      volumes:
      - name: mysql-laravel
        persistentVolumeClaim:
          claimName: mysql-laravel
