k8s-deployment/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
  namespace: ns-laravel-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 80 #containerport
  selector:
    app: laravel-app
