k8s-deployment/laravel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: laravel-app
  namespace: ns-laravel-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect semua HTTP ke HTTPS
    nginx.ingress.kubernetes.io/limit-rpm: "30" # Maksimal 30 request per menit dari satu IP
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide"; 
spec:
  ingressClassName: nginx
  rules:
  - host: laravel.farrasyakila.xyz
    http:
      paths:
      - backend:
          service:
            name: laravel-app
            port:
              number: 8000
        path: /
        pathType: Prefix
